@@ -1,0 +1,11 @@
+# -*- coding: utf-8 -*-
+# vim:ts=4:sw=4:noexpandtab
+
+from .dictlib import ConfigDict
+
+config = ConfigDict(
+	use_ssl = False,
+	password = None,
+	silent_bot = False,
+)
+"The config object"
