@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-import os
+
 import time
 import uuid
 from tests.functional import PmxbotHarness
