@@ -9,3 +9,7 @@ has been removed::
    `pmxbot.util:karma` nor `pmxbot.karma.karma`.
  - Similarly, the Quotes store must now be referenced as
    `pmxbot.quotes:Quotes.store` (a class attribute).
+
+Other backward-incompatible changes::
+
+ - The `config` object has been moved into the parent `pmxbot` package.
